--- a/HospitalPaymentProj/appsettings.json
+++ b/HospitalPaymentProj/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {//Remember to update the userId and Password
-    "DefaultConnection": "Data Source=TECH-SYS003\\SQLSERVER2019;Initial Catalog=HospitalTransactions;Persist Security Info=True;User ID=sa;Password=K@axa.com1"
+    "DefaultConnection": "Data Source=TECH-SYS003\\SQLSERVER2019;Initial Catalog=HospitalTransactions;Persist Security Info=True;User ID=;Password="
   },
   "Logging": {
     "LogLevel": {
